--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
+
+
 .App {
   text-align: center;
 }
-
+.h1{
+  :hover{
+    color: #61dafb;
+  }
+}
 .App-logo {
-  height: 40vmin;
+
   pointer-events: none;
 }
 
@@ -13,16 +19,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
